--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
       run: go mod download
 
     - name: Run tests
-      run: go test -v -race -timeout=30m -coverprofile=coverage.out ./...
+      run: go test -v -race -timeout=30m -coverprofile=coverage.out ./internal/... ./cmd/...
 
     - name: Upload coverage to Codecov
       if: matrix.go-version == '1.24'
@@ -123,13 +123,13 @@ jobs:
       run: go mod download
 
     - name: Run integration tests
-      run: go test -v -timeout=30m ./tests/...
+      run: go test -v -short -timeout=10m ./tests/...
 
   # 构建测试
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [lint, test]
+    needs: [lint, test, integration-test]
     strategy:
       matrix:
         goos: [linux, windows, darwin]
@@ -270,7 +270,7 @@ jobs:
   docker:
     name: Docker Build
     runs-on: ubuntu-latest
-    needs: [lint, test]
+    needs: [lint, test, integration-test]
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
     steps:
     - name: Checkout code
